<resources>
    <string name="app_name">Pokedex</string>

    <string name="pokemon_name">Pikachu</string>
    <string name="pokemon_number">#025</string>
    <string name="pokemon_type">Eléctrico</string>
    <string name="label_height">Altura</string>
    <string name="pokemon_height">0,4m</string>
    <string name="label_weight">Peso</string>
    <string name="pokemon_weight">6,0kg</string>
    <string name="label_ability">Habilidad</string>
    <string name="pokemon_ability">Elec. Estática</string>
    <string name="pokemon_description">Cuando se enfada, este Pokémon descarga la energía que almacena en el interior de las bolsas de las mejillas.</string>
    <string name="previous_pokemon">Arbok N.º 0024</string>
    <string name="next_pokemon">Raichu N.º 0026</string>

    <string name="cd_favorite">Marcar como favorito</string>
    <string name="cd_pokemon_image">Imagen de Pikachu</string>
    <string name="cd_previous_image">Imagen de Morsa</string>
    <string name="cd_next_image">Imagen de Raichu</string>
    <string name="cd_previous">Pokémon anterior.</string>
    <string name="cd_next">Pokémon siguiente</string>
</resources>
